2023-07-04T00:48:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5449677334 # 1697
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&until=2023-07-05
* notice: last 14d: unq all: 5 25
* notice: prev accum: outdated-unq outdated-all / unq all: 663 1242 / 678 1266
* notice: next accum: outdated-unq outdated-all / unq all: 663 1242 / 679 1267
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-07-03]

2022-12-11T08:23:37Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3668123923 # 1112
* notice: last 14d: unq all: 4 16
* notice: prev accum: outdated-unq outdated-all / unq all: 484 920 / 490 933
* notice: next accum: outdated-unq outdated-all / unq all: 484 920 / 492 936
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2022-12-11]

2022-12-11T01:47:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3666869078 # 1111
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 483 918 / 490 933
* notice: next accum: outdated-unq outdated-all / unq all: 484 920 / 490 933
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-26] / []

2022-12-10T16:26:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3665000489 # 1110
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 483 918 / 490 932
* notice: next accum: outdated-unq outdated-all / unq all: 483 918 / 490 933
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-12-10]

2022-12-10T08:23:53Z: