@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-04T00:48:22Z",
-  "count_outdated" : 1242,
-  "uniques_outdated" : 663,
+  "timestamp" : "2023-07-05T00:47:51Z",
+  "count_outdated" : 1243,
+  "uniques_outdated" : 664,
   "count" : 1267,
   "uniques" : 679,
   "clones" : [
-    {
-      "timestamp": "2023-06-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-06-21T00:00:00Z",
       "count": 4,
